--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>G3 Architects</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    
+<body class="work-sans-font">
+    <p>Howarreyu</p>
 </body>
 </html>
