added this part

--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="work-sans-font">
-    <p>Howarreyu</p>
+    <header class="bg-light">
+
+        <nav class="nav-bar display-flex">
+            <h3 class="brand-name">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+            </ul>
+        </nav>
+
+    </header>
+   
+   
+   
+    <main>
+
+
+
+
+    </main>
+    <footer>    
+
+
+
+
+
+    </footer>
 </body>
 </html>
